force-app/main/default/objects/Contract_Line_Item_Detail__c/Contract_Line_Item_Detail__c.object-meta.xml
<CustomObject>
    <label>Contract Line Item Detail</label>
    <nameField>
        <label>Contract Line Item Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Line Item Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>