force-app/main/default/objects/Contract_Line_Item_Detail__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contract Line Item Details</relationshipLabel>
        <relationshipName>Contract_Line_Item_Details</relationshipName>
        <type>Lookup</type>
    </CustomField>