force-app/main/default/objects/Contract_Line_Item_Detail__c/fields/Tariff__c.field-meta.xml
<CustomField>
        <fullName>Tariff__c</fullName>
        <formula>Contract_Line_Item__r.Tariff__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tariff</label>
        <type>Text</type>
    </CustomField>