force-app/main/default/objects/Contract_Line_Item_Detail__c/fields/Termination_Date__c.field-meta.xml
<CustomField>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </CustomField>